corrected paths for custom scrollbar images

--- a/css/main.css
+++ b/css/main.css
@@ -16,26 +16,26 @@ body::-webkit-scrollbar-thumb
 }
 body::-webkit-scrollbar-corner
 {
-	background: #2F3336 url("scroll/corner.png") 2px 2px no-repeat;
+	background: #2F3336 url("../scroll/corner.png") 2px 2px no-repeat;
 }
 body::-webkit-scrollbar-button:vertical:decrement
 {
-	background: #2F3336 url("scroll/up.png") 2px 1px no-repeat;
+	background: #2F3336 url("../scroll/up.png") 2px 1px no-repeat;
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.8);
 }
 body::-webkit-scrollbar-button:vertical:increment
 {
-	background: #2F3336 url("scroll/down.png") 2px 2px no-repeat;
+	background: #2F3336 url("../scroll/down.png") 2px 2px no-repeat;
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.8);
 }
 body::-webkit-scrollbar-button:horizontal:decrement
 {
-	background: #2F3336 url("scroll/left.png") 1px 2px no-repeat;
+	background: #2F3336 url("../scroll/left.png") 1px 2px no-repeat;
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.8);
 }
 body::-webkit-scrollbar-button:horizontal:increment
 {
-	background: #2F3336 url("scroll/right.png") 2px 2px no-repeat;
+	background: #2F3336 url("../scroll/right.png") 2px 2px no-repeat;
 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.8);
 }
 
